<resources>
    <string name="app_name">Reddit Reader</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="default_user">No user logged in yet</string>
    <string name="time_text" translatable="false">4h</string>
    <string name="post_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec</string>
    <string name="comment_number" translatable="false">2112</string>
    <string name="comment_text">comments</string>
    <string name="sub_name" translatable="false">/r/todayilearned</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="connection_error">Network connection unavailable</string>
    <string name="connection_error_button">Exit</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error">Error, could not log in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_news" translatable="false">"Reddit Reader"</string>


</resources>
