<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="105dp"
        android:layout_height="match_parent"
        android:id="@+id/thumbnail"
        android:src="@mipmap/reddit_icon_square"
        android:paddingRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/subreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_name"
            android:textSize="15sp"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_text"
            android:id="@+id/post_date"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_title"
            android:textSize="20sp"
            android:layout_below="@+id/subreddit"
            android:text="@string/post_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comment_icon"
            android:layout_below="@+id/post_title"
            android:paddingBottom="5dp"
            android:layout_alignParentLeft="true"
            android:src="@android:drawable/sym_action_chat" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comments_number"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:text="@string/comment_number"
            android:layout_toRightOf="@+id/comment_icon"
            android:layout_below="@+id/post_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comment_text"
            android:text="@string/comment_text"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@+id/comments_number"
            android:layout_below="@+id/post_title"
            />
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:src="@android:drawable/ic_media_play" />
</LinearLayout>