<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_activity_fragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="famaf.unc.edu.ar.activitiesassignment.NewsActivityFragment"
    tools:showIn="@layout/activity_news">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:src="@mipmap/reddit_icon_square"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/subreddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/r/todayilearned"
                android:textSize="15sp"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:paddingRight="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_text"
                android:textSize="20sp"
                android:layout_below="@+id/subreddit"
                android:text="@string/post_text"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comment_icon"
                android:layout_below="@+id/post_text"
                android:layout_alignParentLeft="true"
                android:src="@android:drawable/sym_action_chat" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:text="@string/comment_text"
                android:layout_toRightOf="@+id/comment_icon"
                android:layout_below="@+id/post_text"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:src="@android:drawable/ic_media_play" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user"
        android:id="@+id/loginStatusTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
